<resources>
    <string name="app_name">AnflyShop</string>
    <string name="title_home">首页</string>
    <string name="title_special_topic">专题</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_sort">分类</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_my">我的</string>
    <string name="user">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="css_goods">
        html,body,p{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
</resources>
