<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_special_topic"
        android:icon="@drawable/ic_special_topic"
        android:title="@string/title_special_topic" />

    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_sort" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_shopping_cart" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:title="@string/title_my" />

</menu>
