<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anfly.anflyshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_special_topic"
        android:name="com.anfly.anflyshop.ui.specialtopic.SpecialTopicFragment"
        android:label="@string/title_special_topic"
        tools:layout="@layout/fragment_special_topic" />

    <fragment
        android:id="@+id/navigation_sort"
        android:name="com.anfly.anflyshop.ui.sort.SortFragment"
        android:label="@string/title_sort"
        tools:layout="@layout/fragment_sort" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.anfly.anflyshop.ui.shopcart.ShoppingCartFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.anfly.anflyshop.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />
</navigation>